@@ -1,3 +1,4 @@
+-   Refined fact module. Now has update, updateterm, forget and shorthand syntax for lookup
 -   Added lock and unlock
 -   Added a version command
 -   Added TicketId command to the trac plugin
